# QSPRT

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c  qsprt.c  qsprt.h
